# eonix-os

./: .gitignore  LICENSE  PROJECT_RULES.md  README.md  eonix_project_brain.db  eonix_project_brain_prompt.md  requirements.txt  run_all_tests.py  run_all_tests.sh  setup.sh  start_eonix.sh  update_db.py
.devcontainer/: devcontainer.json
.gemini/: PROJECT_CONTEXT.md
docs/: SUBMISSION_PLAYBOOK.md  ai-model.md  api.md  architecture.md  arxiv-paper.md  arxiv-paper.tex  arxiv-template.tex  beta-feedback-form.md  changelog.md  core_features.md  detailed_overview.md  getting-started.md  implementation_guide.md  index.html  legacy_progress.md  nexus_os_sources.txt  progress.md  release_notes_v0.4.0.md  release_notes_v0.5.0.md  release_notes_v0.6.0-alpha.md  release_notes_v0.6.0.md  release_notes_v0.7.0.md  release_notes_v0.8.0-alpha.md  release_notes_v0.8.0-beta.md  release_notes_v0.9.0.md  release_notes_v1.0.0.md  setup-guide.md  style.css  week27_codespaces.md
eonix-android/: .gitignore  settings.gradle.kts
eonix-core/: eonix_config_schema.py  file_intelligence.py  llm_engine.py  ota_updater.py  voice_engine.py
eonix-core/ipc/: Cargo.toml
eonix-core/ipc/src/: lib.rs
eonix-desktop/: desktop.py  dock.py  eonix_theme.css  fix_emoji_vm.sh  memory_widget.py  session_manager.py  settings.py  wallpaper.py  window_manager.py
eonix-hub/: hub_server.py  phone_bridge.py
eonix-mind/: main.py  memory.py  mind_v1.py  (+3 more)
eonix-silicon/: Cargo.toml
eonix-silicon/src/: hal.rs  lib.rs
eonix-silicon/src/drivers/: mod.rs
eonix-silicon/src/mesh/: device_discovery.rs  mod.rs
(+156 files in other folders)
